--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 applications:
-- name: pb-sample-node-form
+- name: DSC-sample-node-form
   framework: node
   memory: 64M
   instances: 1
-  host: pb-sample-node-alpha
+  host: DSC-sample-node-form-1
   path: .
   command: node app.js
