--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": "4.6.1"
+    "node": "4.6.1",
+    "npm": "3.10.9"
    },
   "dependencies": {
     "express": "4.10",
