--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 applications:
-- name: kp-sample-node-form
+- name: kp-beta3-sample-node-form
   framework: node
   memory: 64M
   instances: 1
-  host: kp-sample-node-alpha
+  host: kp-beta3-sample-node-alpha
   path: .
   command: node app.js
