--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": "4.6.1",
+    "node": "^4.6",
     "npm": "3.10.9"
-   },
+  },
   "dependencies": {
-    "express": "4.10",
+    "express": "4.13.3",
     "nconf": "0.8.2"
   }
 }
