--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample-node-form",
+  "name": "pb-sample-node-form",
   "description": "A sample form written in Node",
   "version": "0.0.1",
   "private": true,
